--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
        <title>マイクラ考察の海旅公式サイト</title>
        <link rel="stylesheet" href="style.css">
     </head>
-
+    <meta name="google-site-verification" content="bOfBi7QQB0Cdi_jikEZAcH1VHhcvHSOrapEBDVYZRUY" />
     <body>
         <header>
             <h1>マイクラ考察の海旅 公式サイト</h1>
