index.htmlにcssアニメーション適用のdiv追加

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <body>
         <header>
             <h1>マイクラ考察の海旅 公式サイト</h1>
+            <div>
             <hr>
+            </div>
         </header>
 
         <h2>サーバー概要</h2>
