--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <h1>マイクラ考察の海旅 公式サイト</h1>
-            <div id="hr_anim"></div>
+            <div id="hr_anim"><hr></div>
         </header>
         <h2>サーバー概要</h2>
         <p>
