--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
        <meta charset="UTF-8">
        <title>マイクラ考察の海旅公式サイト</title>
        <link rel="stylesheet" href="style.css">
-       <meta name="google-site-verification" content="bOfBi7QQB0Cdi_jikEZAcH1VHhcvHSOrapEBDVYZRUY" /> <!--Google用のトークン　消さないでね byMoku21-->
+       <meta name="google-site-verification" content="bOfBi7QQB0Cdi_jikEZAcH1VHhcvHSOrapEBDVYZRUY" /> <!--Google用のトークン　消さないでね-->
 
     </head>
     <body>
