--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </header>
         <h2>サーバー概要</h2>
         <p>
-        minecraftの考察をより快適にするために作られたサーバーです。<br>
+        minecraftの考察をより快適にするために作られたDiscordサーバーです。<br>
         考察はもちろん、オフトピックスで雑談や作っている作品の共有もできます。<br>
         </p>
         <br>
