--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
        <meta charset="UTF-8">
        <title>マイクラ考察の海旅公式サイト</title>
        <link rel="stylesheet" href="style.css">
-       <meta name="google-site-verification" content="bOfBi7QQB0Cdi_jikEZAcH1VHhcvHSOrapEBDVYZRUY" /> <!--Google用のトークン  消さないでね-->
+       <meta name="google-site-verification" content="bOfBi7QQB0Cdi_jikEZAcH1VHhcvHSOrapEBDVYZRUY" /> <!--Google用のトークン 消さないでね-->
 
     </head>
     <body>
@@ -32,5 +32,8 @@
             Discord:green_end100<br>
             <a href="https://www.youtube.com/@greenend2224" target="_blank"><img id="snsicon" src="image/youtube.svg"></a>
         </p>
+        <footer>
+            @GREENEND 2024
+        </footer>
     </body>
 </html>
