--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <h1>マイクラ考察の海旅 公式サイト</h1>
             <div id="hr_anim"><hr></div>
         </header>
+        <div id="main_intro">
         <h2>サーバー概要</h2>
         <p>
         minecraftの考察をより快適にするために作られたDiscordサーバーです。<br>
@@ -32,6 +33,7 @@
             Discord:green_end100<br>
             <a href="https://www.youtube.com/@greenend2224" target="_blank"><img id="snsicon" src="image/youtube.svg"></a>
         </p>
+        </div>
         <footer>
             @GREENEND 2024
         </footer>
