読み込み速度向上：mysteryofboatNEW.pngのサイズ縮小版を作成

--- a/sidebar.html
+++ b/sidebar.html
@@ -3,5 +3,5 @@
 <div class="sidebar">           <!--サイドバー-->
 
     <h1></h1>
-    <image class="fune1" src="image/misteryofboatNEW.png"></image>
+    <image class="fune1" src="image/misteryofboatNEW(ミニ).png"></image>
 </div>
