--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
        <meta charset="UTF-8">
+       <meta name=”viewport” content=”width=device-width,initial-scale=1″>
        <title>マイクラ考察の海旅公式サイト</title>
        <link rel="stylesheet" href="style.css">
        <meta name="google-site-verification" content="bOfBi7QQB0Cdi_jikEZAcH1VHhcvHSOrapEBDVYZRUY" /> <!--Google用のトークン 消さないでね-->
