ホームのリンクをサイドバーに追加

--- a/sidebar.html
+++ b/sidebar.html
@@ -4,4 +4,7 @@
 
     <h1></h1>
     <image class="fune1" src="image/misteryofboatNEW(ミニ).png"></image>
+    <div class="sidebarmoji">
+        <a id="sidebarlink" href="index.html">ホーム</a>
+    </div>
 </div>
