--- a/sidebar.html
+++ b/sidebar.html
@@ -5,7 +5,7 @@
     <h1></h1>
     <image class="fune1" src="image/misteryofboatNEW(ミニ).png"></image>
     <div class="sidebarmoji">
-        <a id="sidebarlink" href="index.html">ホーム</a>
+        <a id="sidebarlink" href="index.html">ホーム</a><br>
         <a id="sidebarlink" href="contact.html">お問い合わせ</a>
     </div>
 </div>
