サイドバー修正・招待リンク追加―moku21

--- a/sidebar.html
+++ b/sidebar.html
@@ -1,9 +1,9 @@
 <link rel="stylesheet" href="style.css">
 
 <div class="sidebar">           <!--サイドバー-->
-
-    <h1></h1>
-    <image class="fune1" src="image/misteryofboatNEW(ミニ).png"></image>
+    <h3 class="iei">マイクラ考察の海旅</h3>
+    <a href="https://discord.gg/TrHbwF2uXU" class="sidebarimage"><image class="fune1" src="image/goonatrip.png"></image></a>
+    <p class="sanka">↑ぜひ参加してね！</p>
     <div class="sidebarmoji">
         <a id="sidebarlink" href="index.html">ホーム</a><br>
         <a id="sidebarlink" href="contact.html">お問い合わせ</a>
