--- a/sidebar.html
+++ b/sidebar.html
@@ -3,15 +3,15 @@
 <!--ここはサイト内の全てのページに読み込まれています。変更は慎重に。-->
 
 <div class="sidebar">           <!--サイドバー-->
-    <a id="sidebarlink" href="index.html"><h3 class="iei">マイクラ考察の海旅</h3><a>
+    <a id="sidebarlink" href="index.html"><h3 class="iei">マイクラ考察の海旅</h3></div></a>
         <hr>
-    <a href="https://discord.gg/TrHbwF2uXU" class="sidebarimage"><image class="fune1" src="image/goonatrip.png"></image></a>
+    <a href="https://discord.gg/TrHbwF2uXU" class="sidebarimage"><img class="fune1" src="image/goonatrip.png"></img></a>
     <p class="sanka">↑ぜひ参加してね！</p>
     <div class="sidebarmoji">
         <hr><br>
         <a id="sidebarlink" href="index.html">ホーム</a><br>
         <a id="sidebarlink" href="contact.html">お問い合わせ</a><br>
-        　
+
         <hr> <!--区切り線-->
         @GREENEND 2024
     </div>
